--- a/src/resources/english.properties
+++ b/src/resources/english.properties
@@ -1,6 +1,13 @@
 MainTab=Main
 MapTab=Maps
 LevelsTab=Levels
+WavesTab=Waves
 ProjectileTab=Projectiles
-TowerTab=Towers
+TowersTab=Towers
 UnitTab=Units
+
+
+File=File
+Exit=Exit
+Info=Info
+Help=Help
