lots of untested part adding code

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,6 +1,5 @@
-HP = Integer
-Damage = Integer
-Projectile = Projectile
-Speed = Double
-FireRate = Double
-Name = String
+HP = Integer, 100
+Damage = Integer, 100
+Projectile = Projectile, null
+Speed = Double, 1
+FireRate = Double, 1
