creating default parts works

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,5 +1,7 @@
-HP = Integer, 100
-Damage = Integer, 100
-Projectile = Projectile, null
-Speed = Double, 1
-FireRate = Double, 1
+ParameterName = DataType DefaultVal
+HP = java.lang.Integer 100
+Damage = java.lang.Integer 100
+Projectile = engine.Projectile null
+Speed = java.lang.Double 1
+FireRate = java.lang.Double 1
+Range = java.lang.Integer 1
