--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,3 +1,3 @@
-Tower = Name, HP, Range, FireRate
-Unit = Name, HP, Speed
-Projectile = Damage, Speed
+Tower = HP Range FireRate Projectile
+Unit = HP Speed
+Projectile = Damage Speed
