work onSettings list creation

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,6 +1,6 @@
 HP = java.lang.Integer 100
 Damage = java.lang.Integer 100
-Projectile = engine.Projectile null
+Projectile = java.lang.String null
 Speed = java.lang.Double 1
 FireRate = java.lang.Double 1
 Range = java.lang.Integer 1
