--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,6 +1,6 @@
-HP = java.lang.Integer 100
-Damage = java.lang.Integer 100
-Projectile = java.lang.String null
-Speed = java.lang.Double 1
-FireRate = java.lang.Double 1
-Range = java.lang.Integer 1
+HP = Integer 100
+Damage = Integer 100
+Projectile = String null
+Speed = Double 1
+FireRate = Double 1
+Range = Integer 1
