--- a/src/resources/english.properties
+++ b/src/resources/english.properties
@@ -12,9 +12,15 @@ Exit=Exit
 Info=Info
 Help=Help
 
+Update=Update
+
 MapSettings=Map Settings
+GameSettings=Game Settings
 
 GridDimensions=Grid Dimensions
 TileSize=TileSize
 TileColor=Tile Color
+Lives=Lives
+
+SetTiles=Set Tiles
 
