skeleton for text box settings objects

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,6 +1,9 @@
 HP = Integer 100
 Damage = Integer 100
-Projectile = String null
+Projectile = FileName no_current_default.xml
 Speed = Double 1
 FireRate = Double 1
 Range = Integer 1
+Units = UnitList **list_not_initialized**
+Quantities = IntegerList **list_not_initialized**
+Times = IntegerList **list_not_initialized**
