--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,4 +1,5 @@
 Tower = HP Range FireRate Projectile
 Unit = HP Speed Range
 Projectile = Damage Speed
-Wave = Enemies Quantities
+Wave = Units Quantities Times
+Level = Waves Times Map
