Enabled changing tile size (small error in controlling for duplicated code that needs to be fixed) and changing map tile numbers. Need to discuss which tiles to detel.

--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -4,6 +4,7 @@ MapSettings=Map Settings
 GameSettings=Game Settings
 
 GridDimensions=Grid Dimensions
+SelectTileColor=Select Tile Color
 TileSize=TileSize
 TileColor=Tile Color
 Lives=Lives
