--- a/src/resources/display/english.properties
+++ b/src/resources/display/english.properties
@@ -2,6 +2,7 @@ MainEditor=Main
 MapEditor=Maps
 LevelEditor=Levels
 WaveEditor=Waves
+TileEditor=Tiles
 ProjectileEditor=Projectiles
 TowerEditor=Towers
 ItemEditor=Items
