Update parameter data files

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,6 +1,12 @@
+Type = String Basic
 HP = Integer 100
 Damage = Integer 100
 Projectile = String null
 Speed = Double 1
-FireRate = Double 1
-Range = Integer 1
+AttackSpeed = Double 1
+AttackRange = Double 1
+AttackPriority = String Close
+CanHurtPlayer = Boolean true
+SendRate = Double 1
+XCoordinate = Double 0
+YCoordinate = Double 0
