--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,4 +1,5 @@
-Tower = HP Range FireRate Projectile
-Unit = HP Speed Range
-Projectile = Damage Speed
-Wave = Enemies Quantities
+Tower = Type HP AttackRange AttackSpeed Projectile AttackPriority
+Enemy = Type HP Speed CanHurtPlayer
+Projectile = Type Damage Speed
+Wave = Enemies Quantities SendRate
+GridCell = Type XCoordinate YCoordinate
