Parameters updates and Layout

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -10,3 +10,6 @@ CanHurtPlayer = Boolean true
 SendRate = Double 1
 XCoordinate = Double 0
 YCoordinate = Double 0
+Rounds = String null
+Waves = String null
+Enemies = String null
