--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,5 +1,7 @@
 Tower = Type HP AttackRange AttackSpeed Projectile AttackPriority
 Enemy = Type HP Speed CanHurtPlayer
 Projectile = Type Damage Speed
-Wave = Enemies Quantities SendRate
 GridCell = Type XCoordinate YCoordinate
+Level = HP Rounds Quantities SendRate
+Round = Waves Quantities SendRate
+Wave = Enemies Quantities SendRate
