formatting and TowerManager progress

--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,4 +1,4 @@
-Tower = HP Range FireRate Projectile
+Tower = HP Range FireRate Projectile Name Group
 Unit = HP Speed Range
 Projectile = Damage Speed
 Wave = Enemies Quantities
