Added GameState and set up basic methods

--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -2,6 +2,6 @@ Tower = Type HP AttackRange AttackSpeed Projectile AttackPriority
 Enemy = Type HP Speed CanHurtPlayer
 Projectile = Type Damage Speed
 GridCell = Type XCoordinate YCoordinate
-Level = HP Rounds Quantities SendRate
+Level = HP Rounds Quantities SendRate Conditions
 Round = Waves Quantities SendRate
 Wave = Enemies Quantities SendRate
