--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,4 +1,4 @@
 Tower = HP Range FireRate Projectile Name Group
-Unit = HP Speed Range
-Projectile = Damage Speed
+Unit = HP Speed Range Name Group
+Projectile = Damage Speed Name Group
 Wave = Enemies Quantities
