Add collision parameters

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -10,7 +10,11 @@ CanHurtPlayer = Boolean true
 SendRate = Double 1
 XCoordinate = Double 0
 YCoordinate = Double 0
+BoundingHeight = Double 0
+BoundingWidth = Double 0
 Rounds = String null
 Waves = String null
 Enemies = String null
 Conditions = String null
+Map = String null
+SpawnLocation = Integer 0
