--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,7 +1,8 @@
-Tower = Type HP AttackRange AttackSpeed Projectile AttackPriority
-Enemy = Type HP Speed CanHurtPlayer
-Projectile = Type Damage Speed
+Tower = Type HP AttackRange AttackSpeed Projectile AttackPriority BoundingHeight BoundingWidth
+Enemy = Type HP Speed CanHurtPlayer BoundingHeight BoundingWidth
+Projectile = Type Damage Speed BoundingHeight BoundingWidth
 GridCell = Type XCoordinate YCoordinate
 Level = HP Rounds Quantities SendRate Conditions
-Round = Waves Quantities SendRate
-Wave = Enemies Quantities SendRate
+Round = Waves Quantities SendRate SpawnLocation
+Wave = Enemies Quantities SendRate Map
+Game = HP
