--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,6 +1,7 @@
 HP = Integer 100
 Damage = Integer 100
 Projectile = FileName no_current_default.xml
+Image = FileName image_not_available.png
 Speed = Double 1
 FireRate = Double 1
 Range = Integer 1
