finished TowerManager and updated parameters list

--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,6 +1,6 @@
-Tower = Type HP AttackRange AttackSpeed Projectile AttackPriority
-Enemy = Type HP Speed CanHurtPlayer
-Projectile = Type Damage Speed
+Tower = Type HP AttackRange AttackSpeed Projectile AttackPriority Name Group
+Enemy = Type HP Speed CanHurtPlayer Name Group
+Projectile = Type Damage Speed Name Group
 GridCell = Type XCoordinate YCoordinate
 Level = HP Rounds Quantities SendRate Conditions
 Round = Waves Quantities SendRate
