--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -14,3 +14,5 @@ Rounds = String null
 Waves = String null
 Enemies = String null
 Conditions = String null
+Name = String null
+Group = String null
