Refactored Editors so that they now extend Group and setting contents of a Tab will place the entire editors and not just the UI elements

--- a/src/resources/display/main_environment_english.properties
+++ b/src/resources/display/main_environment_english.properties
@@ -2,10 +2,12 @@ MainEditor=Main
 MapEditor=Maps
 LevelEditor=Levels
 WaveEditor=Waves
+TileEditor=Tiles
 ProjectileEditor=Projectiles
 TowerEditor=Towers
 ItemEditor=Items
 UnitEditor=Units
+RowEditor=Rows
 
 File=File
 Exit=Exit
