--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -6,5 +6,4 @@ GridCell = Type XCoordinate YCoordinate
 Level = HP Rounds Quantities SendRate Conditions
 Round = Waves Quantities SendRate SpawnLocation
 Wave = Enemies Quantities SendRate Map
-Game = HP
-
+Game = HP Lives
