Created a singleton controller to keep track of and hold all editors

--- a/src/resources/display/main_environment_english.properties
+++ b/src/resources/display/main_environment_english.properties
@@ -7,9 +7,9 @@ ProjectileEditor=Projectiles
 TowerEditor=Towers
 ItemEditor=Items
 UnitEditor=Units
-RowEditor=Rows
 
 File=File
 Exit=Exit
 Info=Info
 Help=Help
+Title=protected Tower()
