Fixed MapWorkspace and added in gridlines that are resizable

--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -3,7 +3,7 @@ Update=Update
 MapSettings=Map Settings
 GameSettings=Game Settings
 
-GridDimensions=Grid Dimensions
+MapDimensions=Map Dimensions
 SelectTileColor=Select Tile Color
 TileSize=TileSize
 TileColor=Tile Color
