almost refactored data storage

--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,5 +1,5 @@
-Tower = HP Range FireRate Projectile
-Unit = HP Speed Range
-Projectile = Damage Speed
-Wave = Units Quantities Times
-Level = Waves Times Map
+Tower = PartType Name HP Range FireRate Projectile
+Unit = PartType Name HP Speed Range
+Projectile = PartType Name Damage Speed
+Wave = PartType Name Units Quantities Times
+Level = PartType Name Waves Times Map
