lists of parameters available from project reader

--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -7,5 +7,5 @@ Projectile = Type Damage Speed BoundingHeight BoundingWidth
 GridCell = Type XCoordinate YCoordinate
 Level = HP Rounds Quantities SendRate Conditions
 Round = Waves Quantities SendRate SpawnLocation
-Wave = Enemies Quantities SendRate Map
+Wave = Enemies Times 
 Game = HP
