Tower use case almost completed; still need to be able to save file

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,7 +1,7 @@
 Type = String Basic
 HP = Integer 100
 Damage = Integer 100
-Projectile = FileName no_current_default.xml
+Projectile = Sprite no_current_default.xml
 Image = FileName image_not_available.png
 Speed = Double 1
 AttackSpeed = Double 1
@@ -21,3 +21,4 @@ Name = String null
 Group = String null
 Map = String null
 SpawnLocation = Integer 0
+MapLayout = Map null
