should be able to sort params

--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,4 +1,4 @@
-Tower = Type HP AttackRange AttackSpeed Projectile AttackPriority BoundingHeight BoundingWidth Name Group
+Tower = 1.Type HP 2.AttackRange 3.AttackSpeed 8.Projectile 4.AttackPriority 5.BoundingHeight 6.BoundingWidth 0.Name 7.Group
 Enemy = Type HP Speed CanHurtPlayer BoundingHeight BoundingWidth Name Group
 Projectile = Type Damage Speed BoundingHeight BoundingWidth Name Group
 GridCell = Type
