got rid of hp on tower

--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,4 +1,4 @@
-Tower = 1.Type 8.HP 2.AttackRange 3.AttackSpeed 8.Projectile 4.AttackPriority 5.BoundingHeight 6.BoundingWidth 0.Name 7.Group
+Tower = 1.Type 2.AttackRange 3.AttackSpeed 8.Projectile 4.AttackPriority 5.BoundingHeight 6.BoundingWidth 0.Name 7.Group
 Enemy = 2.Type 4.HP 6.Speed 8.CanHurtPlayer 10.BoundingHeight 12.BoundingWidth 0.Name 14.Group
 Projectile = 2.Type 4.Damage 6.Speed 8.BoundingHeight 10.BoundingWidth 0.Name 12.Group
 GridCell = Type
