--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -21,3 +21,7 @@ Name = String null
 Group = String null
 Map = String null
 SpawnLocation = Integer 0
+MapLayout = MapView null
+Rows = Integer 0
+Columns = Integer 0
+TileSize = Double 0
