--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -9,3 +9,4 @@ Level = HP Rounds Quantities SendRate Conditions
 Round = Waves Quantities SendRate SpawnLocation
 Wave = Enemies Times 
 Game = HP
+GameMap = MapLayout Rows Columns TileSize
