--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -17,7 +17,7 @@ Rounds = String null
 Waves = String null
 Enemies = String null
 Conditions = String null
-Name = String null
+Name = String Unnamed
 Group = String null
 Map = String null
 SpawnLocation = Integer 0
