Splash screen finally starting

--- a/src/resources/display/main_environment_english.properties
+++ b/src/resources/display/main_environment_english.properties
@@ -9,7 +9,8 @@ ItemEditor=Items
 UnitEditor=Units
 
 File=File
-Exit=Exit
+Menu=Back to Menu
+Quit=Quit
 Info=Info
 Help=Help
 Title=protected Tower()
