all sprite editors abstracted

--- a/src/resources/display/main_environment_english.properties
+++ b/src/resources/display/main_environment_english.properties
@@ -6,7 +6,7 @@ TileEditor=Tiles
 ProjectileEditor=Projectiles
 TowerEditor=Towers
 ItemEditor=Items
-UnitEditor=Units
+EnemyEditor=Enemys
 
 File=File
 Menu=Back to Menu
