Added game, layout, and level loading

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -11,8 +11,8 @@ CanHurtPlayer = Boolean true
 SendRate = Double 1
 XCoordinate = Double 0
 YCoordinate = Double 0
-BoundingHeight = Double 0
-BoundingWidth = Double 0
+BoundingHeight = Double 10
+BoundingWidth = Double 10
 Rounds = String null
 Waves = String null
 Enemies = String null
@@ -26,3 +26,4 @@ Columns = Integer 0
 TileSize = Double 0
 Lives = Integer 1
 MapLayout = Map null
+Number = Integer 0
