Refactored how TileMap and Tiles are stored. Tiles no longer hold access to information they do not need in

--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -1,13 +1,16 @@
 Update=Update
+Name=Name
 
 MapSettings=Map Settings
 GameSettings=Game Settings
+PathSettings=Path Settings
 
 MapDimensions=Map Dimensions
 SelectTileColor=Select Tile Color
 TileSize=TileSize
 TileColor=Tile Color
 Lives=Lives
+
 
 SetTiles=Set Tiles
 SetPaths=Set Paths
