--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -1,10 +1,10 @@
-Tower = 0.Name 1.Type 2.AttackRange 3.AttackSpeed 8.Projectile 4.AttackPriority 5.BoundingHeight 6.BoundingWidth  7.Group
-Enemy = 2.Type 4.HP 6.Speed 8.CanHurtPlayer 10.BoundingHeight 12.BoundingWidth 0.Name 14.Group
-Projectile = 2.Type 4.Damage 6.Speed 7.BoundingHeight 8.BoundingWidth 0.Name 9.Group
+Tower = 0.Image 1.Name 2.Type 3.AttackRange 4.AttackSpeed 9.Projectile 5.AttackPriority 6.BoundingHeight 7.BoundingWidth  8.Group
+Enemy = 0.Image 1.Name 2.Type 4.HP 6.Speed 8.CanHurtPlayer 10.BoundingHeight 12.BoundingWidth 14.Group
+Projectile = 0.Image 1.Name 2.Type 4.Damage 6.Speed 7.BoundingHeight 8.BoundingWidth 9.Group
 GridCell = Type
 Level = HP Rounds Quantities SendRate Conditions Number
 Round = Waves Quantities SendRate SpawnLocation
 Wave = Enemies Times 
 Game = HP
 GameMap = MapLayout Rows Columns TileSize
-Item = Name
+Item = 0.Image 1.Name
