--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -3,11 +3,13 @@ Name=Name
 
 MapSettings=Map Settings
 GameSettings=Game Settings
-PathSettings=Path Settings
+TileSettings=Place Tiles
+PathSettings=Create Paths
+
 
 MapDimensions=Map Dimensions
-SelectTileColor=Select Tile Color
-TileSize=TileSize
+TileColor=Tile Color
+TileSize=Tile Size
 TileColor=Tile Color
 Lives=Lives
 
