Changed HP and Damage to be doubles

--- a/src/resources/parameter_datatype.properties
+++ b/src/resources/parameter_datatype.properties
@@ -1,6 +1,6 @@
 Type = String Basic
-HP = Integer 100
-Damage = Integer 100
+HP = Double 100
+Damage = Double 100
 Projectile = Sprite no_current_default.xml
 Image = FileName image_not_available.png
 Speed = Double 1
