created RoundEditor class

--- a/src/resources/display/main_environment_english.properties
+++ b/src/resources/display/main_environment_english.properties
@@ -1,6 +1,7 @@
 GameEditor=Game
 MapEditor=Maps
 LevelEditor=Levels
+RoundEditor = Rounds
 WaveEditor=Waves
 TileEditor=Tiles
 ProjectileEditor=Projectiles
