Recoded GameMap, made GridCellFactory extend SpriteFactory

--- a/src/resources/part_parameters.properties
+++ b/src/resources/part_parameters.properties
@@ -6,6 +6,6 @@ Level = HP Rounds Quantities SendRate Conditions Number
 Round = Waves Quantities SendRate SpawnLocation
 Wave = Enemies Times 
 Game = HP
-GameMap = MapLayout Rows Columns TileSize
+GameMap = MapLayout TileSize
 Item = Name
 Tile = Name Color Tags
