Added in notification upon saving maps. Added in enable/disabling of tile setting during path creation.

--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -21,5 +21,9 @@ CreateMap=Create Map
 SaveMap=Save Map
 DeleteMap=Delete Map
 
+CreatePath=Create Path
+SavePath=Save Path
+DeletePath=Delete Path
+
 DimensionXSeparation= x 
 PxSuffix=px
