--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -6,6 +6,9 @@ GameSettings=Game Settings
 TileSettings=Place Tiles
 PathSettings=Create Paths
 
+MapSaved=Map Saved!
+PathSaved=Path Saved!
+
 
 MapDimensions=Map Dimensions
 TileColor=Tile Color
