Refactored paths to only add to predefined root

--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -10,12 +10,11 @@ MapSaved=Map Saved!
 PathSaved=Path Saved!
 
 
-MapDimensions=Map Dimensions
+MapDimensions=Number of Tiles
 TileColor=Tile Color
 TileSize=Tile Size
 TileColor=Tile Color
 Lives=Lives
-
 
 SetTiles=Set Tiles
 SetPaths=Set Paths
