Refactored some magic numbers and organization

--- a/src/resources/display/part_names_english.properties
+++ b/src/resources/display/part_names_english.properties
@@ -2,6 +2,7 @@ GameEditor=Game
 MapEditor=Map
 LevelEditor=Level
 WaveEditor=Wave
+RoundEditor=Round
 TileEditor=Tile
 ProjectileEditor=Projectile
 TowerEditor=Tower
