Revert "magic number fix"
This reverts commit 50d57e5db702e6a46e470a21bf3756f43ab52304, reversing
changes made to 67735d490e9d9c51445f59e04b5eea902d188d37.

Conflicts:
	src/authoringEnvironment/map/MapSidebar.java
	src/authoringEnvironment/map/MapWorkspace.java
	src/authoringEnvironment/objects/GameObject.java
	src/authoringEnvironment/pathing/PathView.java

--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -11,11 +11,12 @@ PathSaved=Path Saved!
 SelectTile=Select a tile:
 
 
-MapDimensions=Number of Tiles
+MapDimensions=Map Dimensions
 TileColor=Tile Color
 TileSize=Tile Size
 TileColor=Tile Color
 Lives=Lives
+
 
 SetTiles=Set Tiles
 SetPaths=Set Paths
