initial modifiers changes

--- a/src/resources/display/main_environment_english.properties
+++ b/src/resources/display/main_environment_english.properties
@@ -8,6 +8,7 @@ ProjectileEditor=Projectiles
 TowerEditor=Towers
 ItemEditor=Items
 EnemyEditor=Enemies
+ModifierEditor= Modifiers
 
 File=File
 Save=Save Game
