Revert "Fix merge changes"

--- a/src/resources/display/map_editor_english.properties
+++ b/src/resources/display/map_editor_english.properties
@@ -11,12 +11,11 @@ PathSaved=Path Saved!
 SelectTile=Select a tile:
 
 
-MapDimensions=Map Dimensions
+MapDimensions=Number of Tiles
 TileColor=Tile Color
 TileSize=Tile Size
 TileColor=Tile Color
 Lives=Lives
-
 
 SetTiles=Set Tiles
 SetPaths=Set Paths
