Renamed ItemEditor to InteractionsEditor

--- a/src/resources/display/main_environment_english.properties
+++ b/src/resources/display/main_environment_english.properties
@@ -6,7 +6,7 @@ WaveEditor=Waves
 TileEditor=Tiles
 ProjectileEditor=Projectiles
 TowerEditor=Towers
-ItemEditor=Items
+InteractionEditor=Interactions
 EnemyEditor=Enemies
 
 File=File
