modifier support started

--- a/src/resources/display/part_names_english.properties
+++ b/src/resources/display/part_names_english.properties
@@ -3,6 +3,7 @@ MapEditor=Map
 LevelEditor=Level
 WaveEditor=Wave
 RoundEditor=Round
+ModifiableEditor=Modifiable
 TileEditor=Tile
 ProjectileEditor=Projectile
 TowerEditor=Tower
